@@ -1,64 +1,25 @@
 package in.reqres;
 
-import data.RegistrationDto;
-import data.RegistrationResponseDto;
-import data.UserDto;
-import data.UserResponseDto;
-import io.restassured.path.json.JsonPath;
+import data.*;
+import helpers.Assertions;
+import helpers.DataProviders;
 import io.restassured.response.Response;
 import org.testng.Assert;
 import org.testng.annotations.Parameters;
 import org.testng.annotations.Test;
 
-import java.util.HashMap;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static io.restassured.RestAssured.*;
-import static org.hamcrest.Matchers.*;
+import static io.restassured.RestAssured.given;
+import static org.hamcrest.Matchers.notNullValue;
 import static specifications.Specifications.*;
 
 public class TestsApi {
-
-    @Test
-    public void firsTest() {
-        given()
-                .when()
-                .get("https://reqres.in/api/users?page=2")
-                .then()
-                .log().all()
-                .body("page", notNullValue())
-                .body("data.id", not(hasItem(nullValue())))
-                .body("data.first_name", hasItem("Lindsay"))
-                .statusCode(200);
-    }
-
-    @Test
-    public void secondTest() {
-        Map<String, String> requestData = new HashMap<>();
-        requestData.put("name", "Yan");
-        requestData.put("job", "stager");
-        Response response = given()
-                .contentType("application/json")
-                .body(requestData)
-                .when()
-                .post("https://reqres.in/api/users")
-                .then()
-                .log().body()
-                .statusCode(201)
-                .extract().response();
-        JsonPath jsonResponse = response.jsonPath();
-        Assert.assertEquals(requestData.get("name"), jsonResponse.get("name"), "Ожидали создание пользователя " +
-                "с именем : " + requestData.get("name") + ", а создался пользователь с именем: " +
-                jsonResponse.get("name"));
-        Assert.assertEquals(requestData.get("job"), jsonResponse.get("job"), "Ожидали создание пользователя " +
-                "с профессией : " + requestData.get("job") + ", а создался пользователь с профессией: " +
-                jsonResponse.get("job"));
-    }
-
-
 
     @Test
     public void testOne() {
@@ -73,34 +34,92 @@ public class TestsApi {
                 .spec(responseSpec200())
                 .extract().body().as(UserResponseDto.class);
         List<String> avatarUrl = userRes.getData().stream()
-                        .map(UserDto::getAvatar)
-                        .collect(Collectors.toList());
+                .map(UserDto::getAvatar)
+                .toList();
         Set<String> uniqueUrl = userRes.getData().stream()
-                        .map(UserDto::getAvatar)
-                        .collect(Collectors.toSet());
+                .map(UserDto::getAvatar)
+                .collect(Collectors.toSet());
         Assert.assertEquals(avatarUrl.size(), uniqueUrl.size(),
-                "Список не уникален, ждали: " + avatarUrl + " получили: " + uniqueUrl);
+                STR."Список не уникален, ждали: \{avatarUrl} получили: \{uniqueUrl}");
+        deleteSpec();
+    }
+
+    @Test(dataProvider = "successLoginData", dataProviderClass = DataProviders.class)
+    @Parameters({"email", "password"})
+    public void registerUser(String email, String password) {
+        installSpec(requestSpec(), responseSpec201());
+        RegistrationDto registrationDto = new RegistrationDto(email, password);
+        given()
+                .spec(requestSpec())
+                .when()
+                .post("api/users")
+                .then()
+                .log().body()
+                .spec(responseSpec201())
+                .extract().response();
+        Assertions.assertRegistrationSuccess(email, password, registrationDto);
+        deleteSpec();
+    }
+
+    @Test(dataProvider = "failureLoginData", dataProviderClass = DataProviders.class)
+    @Parameters({"email", "password"})
+    public void registerFailureUser(String email, String password) {
+        installSpec(requestSpec(), responseSpec201());
+        RegistrationDto registrationDto = new RegistrationDto(email, password);
+        given()
+                .spec(requestSpec())
+                .when()
+                .post("api/users")
+                .then()
+                .log().body()
+                .spec(responseSpec201())
+                .extract().response();
+        Assertions.assertRegistrationFailure(registrationDto);
         deleteSpec();
     }
 
     @Test
-    @Parameters({"email", "password"})
-    public void registerUser(String email, String password, Integer id, String token) {
-        Map<String, String> requestData = new HashMap<>();
-        Response response = given()
+    public void testOnAYear() {
+        installSpec(requestSpec(), responseSpec200());
+        ListDto response = given()
                 .spec(requestSpec())
-                .body(email)
-                .body(password)
                 .when()
-                .post("api/register")
+                .get("api/unknown")
                 .then()
                 .log().body()
                 .spec(responseSpec200())
-                .extract().response();
-        System.out.println(email);
-        System.out.println(password);
-        RegistrationResponseDto registrationResponseDto = new RegistrationResponseDto();
-    Assert.assertTrue(req);
+                .extract().body().as(ListDto.class);
+        List<Integer> years = new ArrayList<>(response.getData()
+                .stream()
+                .map(DataDto::getYear)
+                .toList());
+        Assertions.isSorted(years);
+        deleteSpec();
+    }
 
+    @Test
+    public void testGateway() {
+        installSpec(requestSpec(), responseSpec200());
+        Response response = given()
+                .when()
+                .get("https://gateway.autodns.com/")
+                .then()
+                .log().all()
+                .spec(responseSpec200())
+                .extract().response();
+        // Получаем тело ответа в виде строки
+        String responseBody = response.asString();
+
+        // Регулярное выражение для поиска всех открывающих тегов (но не закрывающих)
+        Pattern pattern = Pattern.compile("<(\\?*)(\\w+)(\\s|>)"); // Ищем <тег без /
+        Matcher matcher = pattern.matcher(responseBody);
+
+        int tagCount = 0;
+        while (matcher.find()) {
+            tagCount++;
+        }
+
+        System.out.println("Количество открывающих тегов: " + tagCount);
     }
 }
+
